# code_faster

./: .gitignore  LICENSE  MANIFEST.in  README.md  pytest.ini  requirements.txt  setup.cfg  setup.py  tox.ini
code_faster/: runner.py  version.py
code_faster/fetchers/: base_fetcher.py  spoj_fetcher.py
code_faster/runners/: cpp_runner.py  java_runner.py  py_runner.py  runner_factory.py
code_faster/sample/cpp/: main.cpp
code_faster/sample/java/: Main.java
code_faster/sample/py/: main.py
examples/: codeforces.bat
src/code_faster/: fetcher.py  runner.py  utils.py
src/code_faster/fetchers/: base_fetcher.py  cc_fetcher.py  cf_fetcher.py  fetcher_factory.py
src/code_faster/runners/: base_runner.py
tests/: test_dummy.py
