[metadata]
name = code_faster
url = https://github.com/rahulsrma26/code_faster
project_urls =
    Code = https://github.com/rahulsrma26/code_faster
license = LICENSE
author = Rahul Sharma
author_email = rahulsrma26@gmail.com
maintainer = rahulsrma26
maintainer_email = welcometors@gmail.com
description = A cross-platform command line utility for bootstrapping and running code with tests
long_description = file: README.md
long_description_content_type = text/markdown
keywords = codeforces runner setuptools development
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    TOPIC :: INTERNET :: WWW/HTTP :: INDEXING/SEARCH
    TOPIC :: SOFTWARE DEVELOPMENT :: CODE GENERATORS
    TOPIC :: SOFTWARE DEVELOPMENT :: LIBRARIES :: PYTHON MODULES
    TOPIC :: SOFTWARE DEVELOPMENT :: TESTING :: UNIT

[options]
packages = find:
package_dir = = src
include_package_data = true
python_requires = >= 3.6
# Dependencies are in setup.py for GitHub's dependency graph.

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    cfetch = code_faster.fetcher:main
    crun = code_faster.runner:main

[tool:pytest]
testpaths = tests
filterwarnings =
    error

[coverage:run]
branch = True
source =
    code_faster
    tests

[coverage:paths]
source =
    src
    */site-packages

[flake8]
# B = bugbear
# E = pycodestyle errors
# F = flake8 pyflakes
# W = pycodestyle warnings
# B9 = bugbear opinions
# ISC = implicit-str-concat
select = B, E, F, W, B9, ISC
ignore =
    # slice notation whitespace, invalid
    E203
    # import at top, too many circular import fixes
    E402
    # line length, handled by bugbear B950
    E501
    # bare except, handled by bugbear B001
    E722
    # bin op line break, invalid
    W503
# up to 88 allowed by bugbear B950
max-line-length = 80
per-file-ignores =
    # __init__ module exports names
    src/flask/__init__.py: F401